--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,25 @@
+body {
+    font: 20px, Arial, sans-serif;
+}
+
 .navbar {
     background-color: #5FB404;
+    /* padding-top: 20px; */
+}
+
+.margin {
+    padding-top: 20px;
+    padding-bottom: 50px;
 }
 
 .quem-somos {
-    background-color: darkgray;
-    padding-top: 20px;
+    background-color: rgb(82, 167, 152);
+}
+
+.parceiros {
+    background-color: rgb(55, 102, 102);
+}
+
+.servicos {
+    background-color: darkslategray;
 }
